--- a/Test/Stardust-Test.vcxproj
+++ b/Test/Stardust-Test.vcxproj
@@ -45,6 +45,7 @@
       <PreprocessorDefinitions>SFML_STATIC;CURRENT_PLATFORM=PLATFORM_WIN;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
