--- a/Stardust/MakefilePSP
+++ b/Stardust/MakefilePSP
@@ -14,6 +14,9 @@ OBJS = ../Platform/src/Platform/Platform.o \
 ../Utilities/src/Network/Socket.o \
 ../Utilities/src/Network/ByteBuffer.o \
 ../Utilities/src/Profiler/Profiler.o \
+../Utilities/src/Utilities/json/json_reader.o \
+../Utilities/src/Utilities/json/json_value.o \
+../Utilities/src/Utilities/json/json_writer.o \
 ../Core/src/Audio/AudioClip.o \
 ../Core/src/Core/Core.o \
 ../Core/src/Core/StateManager.o \
@@ -52,14 +55,6 @@ INCDIR += ../Platform/include ../Utilities/include ../Core/include ../Deps/inclu
 CFLAGS = -O3 -G0 -mpreferred-stack-boundary=4 -ffast-math -gdwarf-2 -DCURRENT_PLATFORM=PLATFORM_PSP
 CXXFLAGS = -std=gnu++17
 ASFLAGS = $(CFLAGS)
-
-BUILD_PRX = 1
-PSP_FW_VERSION=500
-PSP_LARGE_MEMORY = 0
-
-LIBDIR += ./libs/lib/
-LDFLAGS =
-LIBS= -lintraFont -ljson -lpng -lpspaudiolib -lpspaudio -lpspaudiocodec -lz -lpspgum_vfpu -lpspgu -lstdc++ -lpsprtc -lpspctrl -lm -lpspvfpu -lpspsdk -lpsppower -lpsphttp -lpspmath  #Intrafont, PNG, Zlib, JSON, etc.
 
 $(alib): $(OBJS)
 	$(AR) rcs $@ $^
