Stardust with multi-processor comp = fast

--- a/Test/Stardust-Test.vcxproj
+++ b/Test/Stardust-Test.vcxproj
@@ -46,6 +46,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <SupportJustMyCode>false</SupportJustMyCode>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
