--- a/Core/Stardust-Core.vcxproj
+++ b/Core/Stardust-Core.vcxproj
@@ -133,6 +133,7 @@
       <PreprocessorDefinitions>SFML_STATIC;CURRENT_PLATFORM=PLATFORM_WIN;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
