--- a/Core/Stardust-Core.vcxproj
+++ b/Core/Stardust-Core.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="include\GFX\2D\SpriteAnimated.h" />
     <ClInclude Include="include\GFX\2D\Tilemap.h" />
     <ClInclude Include="include\GFX\2D\TilemapAnim.h" />
+    <ClInclude Include="include\GFX\3D\Skybox.h" />
     <ClInclude Include="include\GFX\RenderCore.h" />
     <ClInclude Include="include\GFX\2D\Light.h" />
     <ClInclude Include="include\GFX\3D\Camera.h" />
@@ -165,6 +166,7 @@
     <ClCompile Include="src\GFX\2D\SpriteAnimated.cpp" />
     <ClCompile Include="src\GFX\2D\Tilemap.cpp" />
     <ClCompile Include="src\GFX\2D\TilemapAnim.cpp" />
+    <ClCompile Include="src\GFX\3D\Skybox.cpp" />
     <ClCompile Include="src\GFX\RenderCore.cpp" />
     <ClCompile Include="src\GFX\3D\Camera.cpp" />
     <ClCompile Include="src\GFX\UI\TextRenderer.cpp" />
