--- a/Core/Stardust-Core.vcxproj
+++ b/Core/Stardust-Core.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="include\GFX\2D\Light.h" />
     <ClInclude Include="include\GFX\3D\Camera.h" />
     <ClInclude Include="include\GFX\UI\TextRenderer.h" />
+    <ClInclude Include="include\GFX\UI\UIButton.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Audio\AudioClip.cpp" />
@@ -170,6 +171,7 @@
     <ClCompile Include="src\GFX\RenderCore.cpp" />
     <ClCompile Include="src\GFX\3D\Camera.cpp" />
     <ClCompile Include="src\GFX\UI\TextRenderer.cpp" />
+    <ClCompile Include="src\GFX\UI\UIButton.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
