Fixed sprite issues.

--- a/Stardust/MakefilePSP
+++ b/Stardust/MakefilePSP
@@ -28,6 +28,7 @@ OBJS = ../Platform/src/Platform/Platform.o \
 ../Core/src/GFX/3D/Camera.o \
 ../Core/src/GFX/3D/Skybox.o \
 ../Core/src/GFX/UI/TextRenderer.o \
+../Core/src/GFX/UI/UIButton.o \
 # ../Core/src/Graphics/RendererCore.o \
 # ../Core/src/Graphics/Dialogs.o \
 # ../Core/src/Graphics/vram.o \
